# Lane_following_selfdrive

./: lanes  start_lanes
src/ipm/: CMakeLists.txt
src/ipm/src/: \  ipm.cpp  ipm.cpp~  ipm.cu  ipm_bckup.cpp  ipm_dual_topic.cu  ipm_mahesh.cu  params.txt  test.cpp
src/lane_detection/: package.xml  setup.py
src/lane_detection/lane_detection/: \  curved_lanes.py  detect_lanes.py  horiz_lane.py  image_drawer.py  image_drawer_old.py  lane_contours.py  lane_contours_new.py  lane_follow.py  lane_proc.py  node.py  turning.py
src/lane_following/: package.xml  setup.cfg  setup.py
